# watson-os

./: .gitignore  README.md  binary.modified_timestamps  build.sh
auto/: config
config/: binary  bootstrap  common
config/hooks/live/: 0050-debloat.hook.chroot  0100-harden.hook.chroot  0200-sheild.hook.chroot  0300-theme.hook.chroot  0400-veritas.hook.chroot  0500-analyst.hook.chroot  0600-ghost-code.hook.chroot  9999-final-cleanup.hook.chroot
config/includes.chroot_after_packages/opt/sheild/: sheild
config/includes.chroot_after_packages/opt/veritas/: VERITAS.sh  run.sh  veritas.py  veritas_gui.py
config/includes.chroot_after_packages/opt/veritas/veritas-core/: Cargo.toml
config/includes.chroot_after_packages/opt/veritas/veritas-core/src/: audio.rs  context.rs  ingest.rs  main.rs  vision.rs
config/includes.chroot_after_packages/opt/veritas/veritas-viz/: heatmap_overlay.py
config/package-lists/: base.list.chroot
watson-console/frontend/: claude-sprite.js  console.js  index.html
