[package]
name = "veritas-core"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opencv = { version = "0.88", features = ["clang-runtime"] }
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6.1"
regex = "1"
